apply the trailling comma for prettier

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -26,7 +26,7 @@ export const RightArrow = () => (
       shapeRendering: "inherit",
       verticalAlign: "middle",
       fill: "currentColor",
-      "path fill": "currentColor",
+      "path fill": "currentColor"
     }}
   >
     <path d="m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z" />
